--- a/src/render/index.html
+++ b/src/render/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,4 +9,64 @@
 <body>
         <div id="app"></div>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Spotify Web Playback SDK Quick Start Tutorial</title>
+  </head>
+  <body>
+    <h1>Spotify Web Playback SDK Quick Start Tutorial</h1>
+    <h2>
+      Open your console log: <code>View > Developer > JavaScript Console</code>
+    </h2>
+
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <!-- We will insert our code here. -->
+    <script>
+      window.onSpotifyWebPlaybackSDKReady = () => {
+        const token =
+          "BQDbh0yV9JmJd6A4ZT9eDnw_qB5dAzlg1IGnTESc1ePivYgziIpKhrZvppGLBUxGj8gR0xTorONJq06wJ1nkZBziXJCkEr8_e3ObXk8t6hwVbMR8ONsX37BALXP2AXJCUb9SO_N3KLLgmZYir3pmfMUpI0VP_So5VOhg9A";
+        const player = new Spotify.Player({
+          name: "Web Playback SDK Quick Start Player",
+          getOAuthToken: cb => {
+            cb(token);
+          }
+        });
+
+        // Error handling
+        player.addListener("initialization_error", ({ message }) => {
+          console.error(message);
+        });
+        player.addListener("authentication_error", ({ message }) => {
+          console.error(message);
+        });
+        player.addListener("account_error", ({ message }) => {
+          console.error(message);
+        });
+        player.addListener("playback_error", ({ message }) => {
+          console.error(message);
+        });
+
+        // Playback status updates
+        player.addListener("player_state_changed", state => {
+          console.log(state);
+        });
+
+        // Ready
+        player.addListener("ready", ({ device_id }) => {
+          console.log("Ready with Device ID", device_id);
+        });
+
+        // Not Ready
+        player.addListener("not_ready", ({ device_id }) => {
+          console.log("Device ID has gone offline", device_id);
+        });
+
+        // Connect to the player!
+        player.connect();
+      };
+    </script>
+  </body>
 </html>
